<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/home"
        style="@style/bottomtext"
        android:drawableTop="@drawable/home_fei"
        android:text="@string/home" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="#E8E8E8" />

    <TextView
        android:id="@+id/tuijian"
        style="@style/bottomtext"
        android:drawableTop="@drawable/tuijian"
        android:text="@string/tuijian" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="#E8E8E8" />

    <TextView
        android:id="@+id/set"
        style="@style/bottomtext"
        android:drawableTop="@drawable/set"
        android:text="@string/set" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="#E8E8E8" />

    <TextView
        android:id="@+id/about"
        style="@style/bottomtext"
        android:drawableTop="@drawable/about"
        android:text="@string/about" />

</LinearLayout>