<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E8E8E8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/home"
            style="@style/bottomtext"
            android:drawableTop="@drawable/home"
            android:text="@string/home"
             />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#E8E8E8" />

        <TextView
            android:id="@+id/fenlei"
            style="@style/bottomtext"
            android:drawableTop="@drawable/fenlei"
            android:text="@string/fenlei" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#E8E8E8" />

        <TextView
            android:id="@+id/dailishang_bottom"
            style="@style/bottomtext"
            android:drawableTop="@drawable/dingwei"
            android:text="@string/dailishang" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#E8E8E8" />

        <TextView
            android:id="@+id/my_bottom"
            style="@style/bottomtext"
            android:drawableTop="@drawable/my"
            android:text="@string/my" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#E8E8E8" />

        <TextView
            android:id="@+id/more"
            android:drawableTop="@drawable/more"
            style="@style/bottomtext"
            android:text="@string/more" />
    </LinearLayout>

</LinearLayout>