<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.wlj.ob.ObserversScrollView
        android:id="@+id/sv01"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/huise_F2F2F2"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:background="@color/red_f27e17" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:drawableLeft="@drawable/chuangbabalogo"
                    android:drawablePadding="3dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:minHeight="40dp"
                    android:minWidth="40dp" />

                <TextView
                    android:id="@+id/right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:text=""
                    android:textColor="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/autoscorll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/menchuangzhanshi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/menchuangzhanshi" />

                    <TextView
                        style="@style/activity_main_shangdaohang_text"
                        android:text="@string/menchuangzhanshi" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/mendianchaxun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/mendianchaxun" />

                    <TextView
                        style="@style/activity_main_shangdaohang_text"
                        android:text="@string/mendianchaxun" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/dingdan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/dingdan" />

                    <TextView
                        style="@style/activity_main_shangdaohang_text"
                        android:text="@string/dingdan" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/dailishang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/dailishang" />

                    <TextView
                        style="@style/activity_main_shangdaohang_text"
                        android:text="@string/dailishang" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/wenda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/wenda" />

                    <TextView
                        style="@style/activity_main_shangdaohang_text"
                        android:text="@string/wenda" />
                </LinearLayout>
            </LinearLayout>

            <fragment
                android:id="@+id/remenzhixun_fragment"
                android:name="com.wlj.chuangbaba.activity.main.ExternalFragment_2_remenzixun"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <ImageView
                android:id="@+id/hongbao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/hongbao" />

            <!-- <include layout="@layout/activity_main_3_tiantiantejia" /> -->

            <fragment
                android:id="@+id/remenzhixun_tiantiantejia"
                android:name="com.wlj.chuangbaba.activity.main.ExternalFragment_3_tiantiantejia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/jieshaopengyou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/jieshaopengyou" />

            <include layout="@layout/activity_main_4_tuijianshangpin" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView121"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableBottom="@drawable/readine"
                    android:text="@string/zhuanmaidian"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView132"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="3dp"
                    android:layout_toLeftOf="@+id/zhuanmaidian_more"
                    android:layout_toRightOf="@+id/textView121"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:singleLine="true"
                    android:text="窗爸爸 标准化的门店，你信任的合作伙伴" />

                <ImageView
                    android:id="@+id/zhuanmaidian_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/gengduo" />
            </RelativeLayout>

            <GridView
                android:id="@+id/gridview1_tj"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/huise_C8C8C8"
                android:fastScrollEnabled="true"
                android:horizontalSpacing="2dp"
                android:numColumns="2"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:transcriptMode="alwaysScroll"
                android:verticalSpacing="2dp" >
            </GridView>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:adjustViewBounds="true"
                android:src="@drawable/lianxi" />
        </LinearLayout>
    </com.wlj.ob.ObserversScrollView>

    <include layout="@layout/bottom" />

</RelativeLayout>