<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/huise_F2F2F2"
    android:orientation="vertical" >

    <include
        android:id="@+id/dailishang_inc"
        layout="@layout/top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailishang_inc"
        android:layout_marginBottom="@dimen/title_height" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/danhei_FAFAFA"
                android:paddingBottom="10dp"
                android:src="@drawable/dailishangguanli" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="姓名：" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="联系电话：" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="归属地：" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="等级：" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/Personal_dingdan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    style="@style/dailishangguanli_style"
                    android:drawableLeft="@drawable/dingdan_03"
                    android:text="我的订单" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Personal_jifen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    style="@style/dailishangguanli_style"
                    android:drawableLeft="@drawable/jifen_06"
                    android:text="我的积分" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/personal_soucang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    style="@style/dailishangguanli_style"
                    android:drawableLeft="@drawable/shoucang_08"
                    android:text="我的收藏" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    style="@style/dailishangguanli_style"
                    android:drawableLeft="@drawable/hongbao_10"
                    android:text="我的红包" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    style="@style/dailishangguanli_style"
                    android:drawableLeft="@drawable/zhuanjieshao_12"
                    android:text="我的转介绍" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/personal_mytiwen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    style="@style/dailishangguanli_style"
                    android:drawableLeft="@drawable/tiwen_14"
                    android:text="我的提问" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    style="@style/dailishangguanli_style"
                    android:drawableLeft="@drawable/pingjia_16"
                    android:text="我的评价" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E8E8E8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal" >

            <TextView
                style="@style/bottomtext"
                android:drawableTop="@drawable/home_fei"
                android:text="@string/home" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#E8E8E8" />

            <TextView
                style="@style/bottomtext"
                android:drawableTop="@drawable/tuijian"
                android:text="@string/tuijian" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#E8E8E8" />

            <TextView
                style="@style/bottomtext"
                android:drawableTop="@drawable/set"
                android:text="@string/set" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#E8E8E8" />

            <TextView
                style="@style/bottomtext"
                android:drawableTop="@drawable/about"
                android:text="@string/about" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>